# EcoMCP

./: NutritionIndia.json  README.md  api.py  config_file.json  dataset.ipynb  dataset.py  main.py  mcp.json  nutrition_cf - Sheet5.csv  pyproject.toml
