[project]
name = "mcpproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.17.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "regex>=2025.9.18",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
